[tool.poetry]
name = "counter"
version = "0.1.0"
description = "simple counter service"
authors = ["Ahn Kiwook <bright@hopsoffice.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
